define layer z-index, update grid system, css class name bug fix, lazy load function init

--- a/_functions.scss
+++ b/_functions.scss
@@ -1,4 +1,12 @@
-@mixin format_suffix_loop($format-suffix,$i){
+@mixin clearfix(){
+  &::after{
+    display : block;
+    content : "";
+    clear   : both;
+  }
+}
+
+@mixin format_suffix_loop($format-suffix, $i){
   @if $format-suffix == ""{
     width : (100%/12) * $i;
     float : left;
