--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,6 @@ Index page
 
 ========================================*/
 .posts-container{
-  height : fit-content;
   .post{
     color : #ABB2BE;
     .post-header{
